# ESTP_AAV_Traj_Planner

./: .gitignore  .gitmodules  README.md  requirements.txt
MincoCar/: CMakeLists.txt  README.md  pyproject.toml
MincoCar/include/circle_cover/: circle_cover.hpp
MincoCar/include/corridor_utils/: safe_corridor.hpp
MincoCar/include/corridor_utils/firi/: firi.hpp  sfc_gen.hpp
MincoCar/include/geo_utils/: geo_utils_2d.hpp  geo_utils_3d.hpp  quickhull.hpp
MincoCar/include/map_utils/: raycast.hpp  voxel_dilater.hpp  voxel_map.hpp
MincoCar/include/optimization/: lbfgs.hpp  root_finder.hpp  sdlp.hpp  sdlp_new.hpp
MincoCar/include/path_searching/: kino_astar.hpp
MincoCar/include/plan_manage/: traj_optimizer.hpp  traj_planner.hpp
MincoCar/include/plan_utils/: poly_traj_utils.hpp  traj_container.hpp
MincoCar/include/vehicle_utils/: vehicle_geometry.hpp
MincoCar/minco_utils/: minco_utils.py  rectangle_division.py  transformation.py  vehicle_utils.py  voxel_map_utils.py
MincoCar/src/circle_cover/: circle_cover.cpp
MincoCar/src/corridor_utils/: firi_corridor.cpp  rectangle_corridor.cpp
MincoCar/src/map_utils/: raycast.cpp  voxel_map.cpp
MincoCar/src/path_searching/: kino_astar.cpp
MincoCar/src/plan_manage/: traj_optimizer.cpp  traj_planner.cpp
MincoCar/src/pybind/: mincocar_pybind.cpp
MincoCar/test/: tempCodeRunnerFile.py  test_complex_headland_mower.py  test_complex_headland_pruner.py  test_complex_headland_sprayer.py  test_headland_pkl.py  test_headland_pkl_with_double_sided_pruner.py  test_headland_pkl_with_kms_sprayer.py  test_headland_pkl_with_pruner.py  test_long_headland_pkl.py
MincoCar/utils/: minco_utils.py  polygon_utils.py  raycast.py  vehicle_utils.py  voxel_map_utils.py
example/: east_planner_example.py
